--- a/HMS-Team3-SwiftApp/Controllers/Storyboards/PatientStoryboards/Profile Sub-Screens/SOS Contacts.storyboard
+++ b/HMS-Team3-SwiftApp/Controllers/Storyboards/PatientStoryboards/Profile Sub-Screens/SOS Contacts.storyboard
@@ -6,28 +6,147 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Contacts View Controller-->
-        <scene sceneID="s0d-6b-0kx">
+        <scene sceneID="Gll-Bw-txm">
             <objects>
-                <viewController storyboardIdentifier="SOSContacts" id="Y6W-OH-hqX" customClass="SOSContactsViewController" customModule="HMS_Team3_SwiftApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
+                <viewController storyboardIdentifier="SOSContacts" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Xos-i1-7Ly" customClass="SOSContactsViewController" customModule="HMS_Team3_SwiftApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="B41-8n-3F8">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Gvn-TA-rZ3">
+                                <rect key="frame" x="20" y="157" width="353" height="661"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="1JJ-H6-hsH">
+                                    <size key="itemSize" width="350" height="224"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="h8m-6s-bjU" customClass="CategoriesCollectionViewCell" customModule="HMS_Team3_SwiftApp" customModuleProvider="target">
+                                        <rect key="frame" x="1.6666666666666667" y="0.0" width="350" height="224"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="k9y-Ah-2Bh">
+                                            <rect key="frame" x="0.0" y="0.0" width="350" height="224"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GAE-4I-OlK">
+                                                    <rect key="frame" x="290.66666666666669" y="133" width="34.333333333333314" height="34.333333333333343"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <state key="normal" title="Button"/>
+                                                    <buttonConfiguration key="configuration" style="tinted" image="phone.fill" catalog="system" title="" cornerStyle="capsule">
+                                                        <color key="baseForegroundColor" systemColor="tintColor"/>
+                                                        <color key="baseBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    </buttonConfiguration>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Adarsh Singh" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KEQ-Kx-FJw">
+                                                    <rect key="frame" x="30" y="19" width="173.33333333333334" height="36"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <color key="highlightedColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Patient's Brother" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aXr-13-Irw">
+                                                    <rect key="frame" x="30" y="60" width="146" height="24"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+91 91786-56454" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2VP-vJ-ROF">
+                                                    <rect key="frame" x="30" y="138" width="140" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="adarshsingh12@gmail.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gMu-ky-AV3">
+                                                    <rect key="frame" x="30" y="176" width="203" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QLY-o8-gfD">
+                                                    <rect key="frame" x="290.66666666666669" y="171" width="34.333333333333314" height="34.333333333333343"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <state key="normal" title="Button"/>
+                                                    <buttonConfiguration key="configuration" style="tinted" image="mail.fill" catalog="system" title="" cornerStyle="capsule">
+                                                        <color key="baseBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    </buttonConfiguration>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="GAE-4I-OlK" firstAttribute="top" secondItem="k9y-Ah-2Bh" secondAttribute="top" constant="133" id="3bV-Ui-RiI"/>
+                                                <constraint firstItem="2VP-vJ-ROF" firstAttribute="top" secondItem="k9y-Ah-2Bh" secondAttribute="top" constant="138" id="3nY-CQ-aZS"/>
+                                                <constraint firstItem="gMu-ky-AV3" firstAttribute="top" secondItem="k9y-Ah-2Bh" secondAttribute="top" constant="176" id="BLz-cJ-jNp"/>
+                                                <constraint firstAttribute="trailing" secondItem="GAE-4I-OlK" secondAttribute="trailing" constant="25" id="IiB-ui-19z"/>
+                                                <constraint firstAttribute="trailing" secondItem="QLY-o8-gfD" secondAttribute="trailing" constant="25" id="KgL-sv-jqP"/>
+                                                <constraint firstItem="aXr-13-Irw" firstAttribute="leading" secondItem="k9y-Ah-2Bh" secondAttribute="leading" constant="30" id="NGh-3W-CaH"/>
+                                                <constraint firstItem="aXr-13-Irw" firstAttribute="top" secondItem="k9y-Ah-2Bh" secondAttribute="top" constant="60" id="W9Y-iR-dli"/>
+                                                <constraint firstItem="2VP-vJ-ROF" firstAttribute="leading" secondItem="k9y-Ah-2Bh" secondAttribute="leading" constant="30" id="XWh-X9-W6a"/>
+                                                <constraint firstItem="QLY-o8-gfD" firstAttribute="top" secondItem="k9y-Ah-2Bh" secondAttribute="top" constant="171" id="kKS-gc-aV3"/>
+                                                <constraint firstItem="gMu-ky-AV3" firstAttribute="leading" secondItem="k9y-Ah-2Bh" secondAttribute="leading" constant="30" id="nIH-Rc-wHZ"/>
+                                                <constraint firstItem="KEQ-Kx-FJw" firstAttribute="leading" secondItem="k9y-Ah-2Bh" secondAttribute="leading" constant="30" id="nlT-pu-82i"/>
+                                                <constraint firstItem="KEQ-Kx-FJw" firstAttribute="top" secondItem="k9y-Ah-2Bh" secondAttribute="top" constant="19" id="wGc-AN-dfW"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <color key="backgroundColor" red="0.098039209840000002" green="0.60392159219999997" blue="0.55686277149999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <size key="customSize" width="350" height="224"/>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="Xos-i1-7Ly" id="sM2-Hg-eaI"/>
+                                    <outlet property="delegate" destination="Xos-i1-7Ly" id="QbS-WJ-a6Q"/>
+                                </connections>
+                            </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NHV-Ou-a1i">
+                                <rect key="frame" x="250" y="104" width="123" height="35"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" systemColor="tintColor"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Add Contact"/>
+                                <connections>
+                                    <action selector="AddContacts:" destination="Xos-i1-7Ly" eventType="touchUpInside" id="lQi-Wc-dps"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="5l9-Qo-hfS"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="NHV-Ou-a1i" secondAttribute="bottom" constant="713" id="3zH-tr-wvG"/>
+                            <constraint firstItem="5l9-Qo-hfS" firstAttribute="trailing" secondItem="Gvn-TA-rZ3" secondAttribute="trailing" constant="20" id="6sg-gw-s50"/>
+                            <constraint firstItem="NHV-Ou-a1i" firstAttribute="top" secondItem="B41-8n-3F8" secondAttribute="top" constant="104" id="8IY-nq-3hJ"/>
+                            <constraint firstAttribute="trailing" secondItem="NHV-Ou-a1i" secondAttribute="trailing" constant="20" id="NhW-Wa-kpn"/>
+                            <constraint firstItem="Gvn-TA-rZ3" firstAttribute="leading" secondItem="5l9-Qo-hfS" secondAttribute="leading" constant="20" id="REE-dD-MQX"/>
+                            <constraint firstItem="NHV-Ou-a1i" firstAttribute="leading" secondItem="B41-8n-3F8" secondAttribute="leading" constant="250" id="Zwf-Lu-nTc"/>
+                            <constraint firstItem="Gvn-TA-rZ3" firstAttribute="top" secondItem="NHV-Ou-a1i" secondAttribute="bottom" constant="18" id="yV6-Gg-hVs"/>
+                            <constraint firstItem="5l9-Qo-hfS" firstAttribute="bottom" secondItem="Gvn-TA-rZ3" secondAttribute="bottom" id="zrb-cS-J1F"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="tGN-TI-WyC"/>
+                    <connections>
+                        <outlet property="contactsCardCollectionView" destination="Gvn-TA-rZ3" id="l6M-is-Zrd"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ufn-xU-Qpa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-19" y="4"/>
+            <point key="canvasLocation" x="1133.5877862595419" y="3.5211267605633805"/>
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <image name="mail.fill" catalog="system" width="128" height="93"/>
+        <image name="phone.fill" catalog="system" width="128" height="114"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="tintColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
