--- a/HMS-Team3-SwiftApp/Controllers/Storyboards/DoctorStoryboards/ScheduleStoryboard.storyboard
+++ b/HMS-Team3-SwiftApp/Controllers/Storyboards/DoctorStoryboards/ScheduleStoryboard.storyboard
@@ -305,6 +305,9 @@
                                     </label>
                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="C84-Cx-baU">
                                         <rect key="frame" x="268" y="39" width="51" height="30"/>
+                                        <connections>
+                                            <action selector="permissionForChat:" destination="oq8-Gj-ihg" eventType="valueChanged" id="vE3-mH-kDV"/>
+                                        </connections>
                                     </switch>
                                 </subviews>
                                 <color key="backgroundColor" red="0.65882354970000001" green="0.82352948189999997" blue="0.8078432083" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -378,6 +381,7 @@
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="buttonClicked:" destination="oq8-Gj-ihg" eventType="touchUpInside" id="q5z-6C-PnS"/>
+                                    <action selector="setStatus:" destination="oq8-Gj-ihg" eventType="touchUpInside" id="JAX-Px-cWa"/>
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eBe-29-9M1">
@@ -416,7 +420,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heart.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="vu6-8q-aVW">
-                                                <rect key="frame" x="30" y="8.0000000000000018" width="15" height="14.999999999999998"/>
+                                                <rect key="frame" x="30" y="7.9999999999999991" width="15" height="15"/>
                                                 <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="15" id="7Ff-fV-kne"/>
