--- a/HMS-Team3-SwiftApp/Controllers/Storyboards/DoctorStoryboards/HomeStoryboard.storyboard
+++ b/HMS-Team3-SwiftApp/Controllers/Storyboards/DoctorStoryboards/HomeStoryboard.storyboard
@@ -24,7 +24,8 @@
                     <connections>
                         <segue destination="88d-ZN-WFR" kind="relationship" relationship="viewControllers" id="a3h-5r-WbO"/>
                         <segue destination="x0L-Gz-vn0" kind="relationship" relationship="viewControllers" id="rcr-AR-nQk"/>
-                        <segue destination="EGp-Fc-5Ib" kind="relationship" relationship="viewControllers" id="SxW-DR-rgh"/>
+                        <segue destination="tEx-S0-6Kc" kind="relationship" relationship="viewControllers" id="c9A-Wm-b3W"/>
+                        <segue destination="EGp-Fc-5Ib" kind="relationship" relationship="viewControllers" id="Erv-IL-7T6"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rYQ-k0-LDl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -53,19 +54,30 @@
             </objects>
             <point key="canvasLocation" x="818" y="-17"/>
         </scene>
+        <!--DoctorChatNavigationController-->
+        <scene sceneID="22r-Xo-ykc">
+            <objects>
+                <viewControllerPlaceholder storyboardName="ChatStoryboard" referencedIdentifier="DoctorChatNavigationController" id="tEx-S0-6Kc" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Chat" image="message" catalog="system" id="7SI-v1-bbz"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mJ9-9g-ON6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="827" y="101"/>
+        </scene>
         <!--DoctorProfileNavigationController-->
         <scene sceneID="44K-j9-lO6">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wOv-Oc-1fq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <viewControllerPlaceholder storyboardIdentifier="DoctorProfileNavigationController" storyboardName="DoctorProfileStoryboard" referencedIdentifier="DoctorProfileNavigationController" id="EGp-Fc-5Ib" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Profile" image="person.circle" catalog="system" id="Mzc-hd-7ba"/>
                 </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="wOv-Oc-1fq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="827" y="208"/>
         </scene>
     </scenes>
     <resources>
         <image name="house" catalog="system" width="128" height="104"/>
+        <image name="message" catalog="system" width="128" height="116"/>
         <image name="person.circle" catalog="system" width="128" height="123"/>
         <image name="person.line.dotted.person" catalog="system" width="128" height="58"/>
         <namedColor name="secondary">
